src/backends/wrf/WRFConfigBridge.hpp

/**
 * @brief Get pointer to WRFDA's head_grid structure
 *
 * @return void* Pointer to head_grid, or nullptr if not allocated
 *
 * @note The pointer is valid as long as head_grid exists
 * @note Do not free this pointer - it's managed by WRFDA
 */
void* wrfda_get_head_grid_ptr_();
/**
 * @brief Check if WRFDA's head_grid has been allocated
 *
 * @return bool True if head_grid is allocated
 */
bool wrfda_head_grid_allocated_();
//============================================================================
// WRFDA Grid Geometry Getters
//============================================================================

/**
 * @brief Get dx from WRFDA's model_config_rec
 *
 * @param[in] domain_id Domain ID (1-based)
 * @return float Grid spacing in X direction (meters)
 */
float wrf_get_grid_dx_(int domain_id);
/**
 * @brief Get dy from WRFDA's model_config_rec
 *
 * @param[in] domain_id Domain ID (1-based)
 * @return float Grid spacing in Y direction (meters)
 */
float wrf_get_grid_dy_(int domain_id);
/**
 * @brief Get map_proj from WRFDA's model_config_rec
 *
 * @param[in] domain_id Domain ID (1-based)
 * @return int Map projection type
 */
int wrf_get_grid_map_proj_(int domain_id);
/**
 * @brief Get center latitude from WRFDA's model_config_rec
 *
 * @param[in] domain_id Domain ID (1-based)
 * @return float Center latitude (degrees)
 */
float wrf_get_grid_cen_lat_(int domain_id);
/**
 * @brief Get center longitude from WRFDA's model_config_rec
 *
 * @param[in] domain_id Domain ID (1-based)
 * @return float Center longitude (degrees)
 */
float wrf_get_grid_cen_lon_(int domain_id);
/**
 * @brief Get first true latitude from WRFDA's model_config_rec
 *
 * @param[in] domain_id Domain ID (1-based)
 * @return float First true latitude (degrees)
 */
float wrf_get_grid_truelat1_(int domain_id);
/**
 * @brief Get second true latitude from WRFDA's model_config_rec
 *
 * @param[in] domain_id Domain ID (1-based)
 * @return float Second true latitude (degrees)
 */
float wrf_get_grid_truelat2_(int domain_id);
/**
 * @brief Get standard longitude from WRFDA's model_config_rec
 *
 * @param[in] domain_id Domain ID (1-based)
 * @return float Standard longitude (degrees)
 */
float wrf_get_grid_stand_lon_(int domain_id);
//============================================================================
// Config Flags Pointer Access
//============================================================================

/**
 * @brief Get C pointer to WRF config_flags structure
 *
 * @return void* Opaque pointer to grid_config_rec_type structure
 * @details This pointer can be passed to WRF observation operators and
 * other WRF Fortran routines that require config_flags as a parameter.
 *
 * @note The pointer points to module-level config_flags_ in
 * metada_wrf_config_bridge
 * @note The structure is maintained in Fortran - do not free this pointer
 */
void* wrf_get_config_flags_ptr_();
/**
 * @brief Get size of config_flags structure
 *
 * @return size_t Size of grid_config_rec_type structure in bytes
 * @details Useful for validation and debugging
 */
size_t wrf_get_config_flags_size_();