src/backends/wrf/wrf_config_bridge.F90

    
    ! STEP 1: Allocate and configure domain (WRFDA standard workflow)
    call alloc_and_configure_domain(domain_id=domain_id, &
                                     grid=head_grid, &
                                     parent=null_domain, &
                                     kid=-1)
    
    ! Verify allocation succeeded
    if (.not. associated(head_grid)) then
      ierr = 1
      return
    end if
    
    ! STEP 2: Extract domain-specific config
    call model_to_grid_config_rec(head_grid%id, model_config_rec, config_flags_)
    
    ! STEP 3: Set scalar indices from config
    call set_scalar_indices_from_config(head_grid%id, idum1, idum2)
    
    ! STEP 4: Initialize WRF I/O system
    call init_wrfio()
    
    ! STEP 5: Setup timekeeping for the domain
    call setup_timekeeping(head_grid)
    
  end function wrfda_alloc_and_init_domain
  
  !> @brief Get pointer to WRFDA's head_grid
  !> @return C pointer to head_grid, or c_null_ptr if not allocated
  type(c_ptr) function wrfda_get_head_grid_ptr() bind(C, name="wrfda_get_head_grid_ptr_")
    implicit none
    
    if (associated(head_grid)) then
      wrfda_get_head_grid_ptr = c_loc(head_grid)
    else
      wrfda_get_head_grid_ptr = c_null_ptr
    end if
    
  end function wrfda_get_head_grid_ptr
  
  !> @brief Check if head_grid has been allocated
  !> @return True if head_grid is allocated
  logical(c_bool) function wrfda_head_grid_allocated() bind(C, name="wrfda_head_grid_allocated_")
    implicit none
    
    wrfda_head_grid_allocated = logical(associated(head_grid), kind=c_bool)
    
  end function wrfda_head_grid_allocated

  !============================================================================
  ! WRFDA Grid Geometry Getters (read from model_config_rec)
  !============================================================================
  
  ! Get grid geometry from WRFDA's model_config_rec (authoritative source)
  ! These getters read from model_config_rec which is the master configuration storage
  
  function wrf_get_grid_dx(domain_id) bind(C, name="wrf_get_grid_dx_") result(dx)
    implicit none
    integer(c_int), intent(in), value :: domain_id
    real(c_float) :: dx
    
    dx = real(model_config_rec%dx(domain_id), kind=c_float)
  end function wrf_get_grid_dx
  
  function wrf_get_grid_dy(domain_id) bind(C, name="wrf_get_grid_dy_") result(dy)
    implicit none
    integer(c_int), intent(in), value :: domain_id
    real(c_float) :: dy
    
    dy = real(model_config_rec%dy(domain_id), kind=c_float)
  end function wrf_get_grid_dy
  
  function wrf_get_grid_map_proj(domain_id) bind(C, name="wrf_get_grid_map_proj_") result(map_proj)
    implicit none
    integer(c_int), intent(in), value :: domain_id
    integer(c_int) :: map_proj
    
    map_proj = int(model_config_rec%map_proj(domain_id), kind=c_int)
  end function wrf_get_grid_map_proj
  
  function wrf_get_grid_cen_lat(domain_id) bind(C, name="wrf_get_grid_cen_lat_") result(cen_lat)
    implicit none
    integer(c_int), intent(in), value :: domain_id
    real(c_float) :: cen_lat
    
    cen_lat = real(model_config_rec%cen_lat(domain_id), kind=c_float)
  end function wrf_get_grid_cen_lat
  
  function wrf_get_grid_cen_lon(domain_id) bind(C, name="wrf_get_grid_cen_lon_") result(cen_lon)
    implicit none
    integer(c_int), intent(in), value :: domain_id
    real(c_float) :: cen_lon
    
    cen_lon = real(model_config_rec%cen_lon(domain_id), kind=c_float)
  end function wrf_get_grid_cen_lon
  
  function wrf_get_grid_truelat1(domain_id) bind(C, name="wrf_get_grid_truelat1_") result(truelat1)
    implicit none
    integer(c_int), intent(in), value :: domain_id
    real(c_float) :: truelat1
    
    truelat1 = real(model_config_rec%truelat1(domain_id), kind=c_float)
  end function wrf_get_grid_truelat1
  
  function wrf_get_grid_truelat2(domain_id) bind(C, name="wrf_get_grid_truelat2_") result(truelat2)
    implicit none
    integer(c_int), intent(in), value :: domain_id
    real(c_float) :: truelat2
    
    truelat2 = real(model_config_rec%truelat2(domain_id), kind=c_float)
  end function wrf_get_grid_truelat2
  
  function wrf_get_grid_stand_lon(domain_id) bind(C, name="wrf_get_grid_stand_lon_") result(stand_lon)
    implicit none
    integer(c_int), intent(in), value :: domain_id
    real(c_float) :: stand_lon
    
    stand_lon = real(model_config_rec%stand_lon(domain_id), kind=c_float)
  end function wrf_get_grid_stand_lon
  
  !============================================================================
  ! Config Flags Pointer Access (for passing to WRF observation operators)
  !============================================================================
  
  ! Get C pointer to config_flags_ for passing to WRF observation operators
  ! This allows METADA C++ code to pass config_flags to WRF Fortran routines
  function wrf_get_config_flags_ptr() bind(C, name="wrf_get_config_flags_ptr_") result(ptr)
    implicit none
    type(c_ptr) :: ptr
    
    ! Return C pointer to module-level config_flags_
    ptr = c_loc(config_flags_)
  end function wrf_get_config_flags_ptr
  
  ! Get size of config_flags structure (for validation)
  function wrf_get_config_flags_size() bind(C, name="wrf_get_config_flags_size_") result(size_bytes)
    implicit none
    integer(c_size_t) :: size_bytes
    
    ! Calculate size of config_flags_ structure
    size_bytes = storage_size(config_flags_) / 8  ! Convert bits to bytes
  end function wrf_get_config_flags_size
  
  !============================================================================
  ! Config Accessor Functions (for namelist values from config_flags_)
  !============================================================================
  ! Accessor functions for config_flags_ members
  ! These access the module-level config_flags_ variable
  
  function wrf_get_dx() bind(C, name="wrf_get_dx_") result(dx)
    implicit none
    real(c_double) :: dx
    
    dx = real(config_flags_%dx, kind=c_double)
  end function wrf_get_dx

  function wrf_get_dy() bind(C, name="wrf_get_dy_") result(dy)
    implicit none
    real(c_double) :: dy
    
    dy = real(config_flags_%dy, kind=c_double)
  end function wrf_get_dy

  function wrf_get_map_proj() bind(C, name="wrf_get_map_proj_") result(map_proj)
    implicit none
    integer(c_int) :: map_proj
    
    map_proj = int(config_flags_%map_proj, kind=c_int)
  end function wrf_get_map_proj

  function wrf_get_truelat1() bind(C, name="wrf_get_truelat1_") result(truelat1)
    implicit none
    real(c_double) :: truelat1
    
    truelat1 = real(config_flags_%truelat1, kind=c_double)
  end function wrf_get_truelat1

  function wrf_get_truelat2() bind(C, name="wrf_get_truelat2_") result(truelat2)
    implicit none
    real(c_double) :: truelat2
    
    truelat2 = real(config_flags_%truelat2, kind=c_double)
  end function wrf_get_truelat2

  function wrf_get_stand_lon() bind(C, name="wrf_get_stand_lon_") result(stand_lon)
    implicit none
    real(c_double) :: stand_lon
    
    stand_lon = real(config_flags_%stand_lon, kind=c_double)
  end function wrf_get_stand_lon

  function wrf_get_cen_lat() bind(C, name="wrf_get_cen_lat_") result(cen_lat)
    implicit none
    real(c_double) :: cen_lat
    
    cen_lat = real(config_flags_%cen_lat, kind=c_double)
  end function wrf_get_cen_lat

  function wrf_get_cen_lon() bind(C, name="wrf_get_cen_lon_") result(cen_lon)
    implicit none
    real(c_double) :: cen_lon
    
    cen_lon = real(config_flags_%cen_lon, kind=c_double)
  end function wrf_get_cen_lon

end module metada_wrf_config_bridge

